Added lte-progress-box component.

--- a/demo/index.html
+++ b/demo/index.html
@@ -486,16 +486,30 @@
                 <section class="content">
                     <div class="row">
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <lte-info-box type="aqua" icon="envelope-o" text="MESSAGES" number="1410"></lte-info-box>
+                            <lte-info-box type="aqua" icon="envelope-o" text="Messages" number="1410"></lte-info-box>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <lte-info-box type="green" icon="flag-o" text="BOOKMARKS" number="410"></lte-info-box>
+                            <lte-info-box type="green" icon="flag-o" text="Bookmarks" number="410"></lte-info-box>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <lte-info-box type="yellow" icon="files-o" text="UPLOADS" number="13648"></lte-info-box>
+                            <lte-info-box type="yellow" icon="files-o" text="Uploads" number="13648"></lte-info-box>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12">
-                            <lte-info-box type="red" icon="star-o" text="LIKES" number="93139"></lte-info-box>
+                            <lte-info-box type="red" icon="star-o" text="Likes" number="93139"></lte-info-box>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <lte-progress-box type="aqua" icon="bookmark-o" text="Bookmarks" number="41410" progress="70" description="70% Increase in 30 Days"></lte-progress-box>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <lte-progress-box type="green" icon="thumbs-o-up" text="Likes" number="41410" progress="70" description="70% Increase in 30 Days"></lte-progress-box>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <lte-progress-box type="yellow" icon="calendar" text="Events" number="41410" progress="70" description="70% Increase in 30 Days"></lte-progress-box>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <lte-progress-box type="red" icon="comments-o" text="Comments" number="41410" progress="70" description="70% Increase in 30 Days"></lte-progress-box>
                         </div>
                     </div>
                 </section>
