Added smallBox component.

--- a/demo/index.html
+++ b/demo/index.html
@@ -512,6 +512,20 @@
                             <lte-progress-box type="red" icon="comments-o" text="Comments" number="41410" progress="70" description="70% Increase in 30 Days"></lte-progress-box>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-3 col-xs-6">
+                            <lte-small-box type="aqua" title="150" text="New Orders" icon="shopping-cart" link-text="More info"></lte-small-box>
+                        </div>
+                        <div class="col-lg-3 col-xs-6">
+                            <lte-small-box type="green" title="53%" text="Bounce Rate" icon="bar-chart" link-text="More info"></lte-small-box>
+                        </div>
+                        <div class="col-lg-3 col-xs-6">
+                            <lte-small-box type="yellow" title="44" text="User Registrations" icon="user-plus" link-text="More info"></lte-small-box>
+                        </div>
+                        <div class="col-lg-3 col-xs-6">
+                            <lte-small-box type="red" title="65" text="Unique Visitors" icon="pie-chart" link-text="More info"></lte-small-box>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
