smallBox title and text can now be transcluded.

--- a/demo/index.html
+++ b/demo/index.html
@@ -517,7 +517,9 @@
                             <lte-small-box type="aqua" title="150" text="New Orders" icon="shopping-cart" link-text="More info"></lte-small-box>
                         </div>
                         <div class="col-lg-3 col-xs-6">
-                            <lte-small-box type="green" title="53%" text="Bounce Rate" icon="bar-chart" link-text="More info"></lte-small-box>
+                            <lte-small-box type="green" text="Bounce Rate" icon="bar-chart" link-text="More info">
+                                <box-title>53<sup>%</sup></box-title>
+                            </lte-small-box>
                         </div>
                         <div class="col-lg-3 col-xs-6">
                             <lte-small-box type="yellow" title="44" text="User Registrations" icon="user-plus" link-text="More info"></lte-small-box>
