Shortened the names of treeview directives.

--- a/demo/index.html
+++ b/demo/index.html
@@ -299,28 +299,28 @@
                     </form>
                     <ul class="sidebar-menu">
                         <li class="header">MAIN NAVIGATION</li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-dashboard"></i>
                                 <span>Dashboard</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
                                 <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                             </ul>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-files-o"></i>
                                 <span>Layout Options</span>
                                 <span class="pull-right-container">
                                     <span class="label label-primary pull-right">4</span>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
                                 <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
                                 <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
@@ -335,30 +335,30 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-pie-chart"></i>
                                 <span>Charts</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
                                 <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
                                 <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
                                 <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                             </ul>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-laptop"></i>
                                 <span>UI Elements</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li class="active"><a href="general.html"><i class="fa fa-circle-o"></i> General</a></li>
                                 <li><a href="icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
                                 <li><a href="buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
@@ -367,27 +367,27 @@
                                 <li><a href="modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
                             </ul>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-edit"></i> <span>Forms</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
                                 <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
                                 <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
                             </ul>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-table"></i> <span>Tables</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
                                 <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
                             </ul>
@@ -411,14 +411,14 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-folder"></i> <span>Examples</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
                                 <li><a href="../examples/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
                                 <li><a href="../examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
@@ -430,31 +430,31 @@
                                 <li><a href="../examples/pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
                             </ul>
                         </li>
-                        <li class="treeview" lte-sidebar-treeview>
-                            <a href="#" lte-sidebar-treeview-toggle>
+                        <li class="treeview" lte-treeview>
+                            <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-share"></i>
                                 <span>Multilevel</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
-                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                            <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                                <li lte-sidebar-treeview>
-                                    <a href="#" lte-sidebar-treeview-toggle><i class="fa fa-circle-o"></i> Level One
+                                <li lte-treeview>
+                                    <a href="#" lte-treeview-toggle><i class="fa fa-circle-o"></i> Level One
                                         <span class="pull-right-container">
                                             <i class="fa fa-angle-left pull-right"></i>
                                         </span>
                                     </a>
-                                    <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                                    <ul class="treeview-menu" lte-treeview-menu>
                                         <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                                        <li lte-sidebar-treeview>
-                                            <a href="#" lte-sidebar-treeview-toggle><i class="fa fa-circle-o"></i> Level Two
+                                        <li lte-treeview>
+                                            <a href="#" lte-treeview-toggle><i class="fa fa-circle-o"></i> Level Two
                                                 <span class="pull-right-container">
                                                     <i class="fa fa-angle-left pull-right"></i>
                                                 </span>
                                             </a>
-                                            <ul class="treeview-menu" lte-sidebar-treeview-menu>
+                                            <ul class="treeview-menu" lte-treeview-menu>
                                                 <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
                                                 <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
                                             </ul>
