Added lteBox component.

--- a/demo/index.html
+++ b/demo/index.html
@@ -528,6 +528,50 @@
                             <lte-small-box type="red" title="65" text="Unique Visitors" icon="pie-chart" link-text="More info"></lte-small-box>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <lte-box collapsable="true" collapsed="true" title="Expandable" type="default">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box removable="true" title="Removable" type="success">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box collapsable="true" collapsed="false" title="Collapsable" type="warning">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box loading="true" title="Loading state" type="danger">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <lte-box collapsable="true" collapsed="true" title="Expandable" type="default" solid="true">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box removable="true" title="Removable" type="success" solid="true">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box collapsable="true" collapsed="false" title="Collapsable" type="warning" solid="true">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                        <div class="col-md-3">
+                            <lte-box loading="true" title="Loading state" type="danger" solid="true">
+                                The body of the box
+                            </lte-box>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
