--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,8 @@
         <script src="/demo/demo.js"></script>
 
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="/dist/admin-lte.css" />
-        <link rel="stylesheet" type="text/css" href="/dist/skins.css" />
+        <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/AdminLTE.min.css" />
+        <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/skins/_all-skins.min.css" />
         <link rel="stylesheet" type="text/css" href="/node_modules/font-awesome/css/font-awesome.min.css" />
     </head>
     <body class="skin-blue sidebar-mini">
@@ -335,7 +335,7 @@
                                 </span>
                             </a>
                         </li>
-                        <li class="treeview" lte-treeview>
+                        <li class="treeview" lte-treeview active="true">
                             <a href="#" lte-treeview-toggle>
                                 <i class="fa fa-pie-chart"></i>
                                 <span>Charts</span>
