Sibling treeviews now collapse when expanding a specific treeview.

--- a/demo/index.html
+++ b/demo/index.html
@@ -297,7 +297,7 @@
                             </span>
                         </div>
                     </form>
-                    <ul class="sidebar-menu">
+                    <ul class="sidebar-menu" lte-treeview>
                         <li class="header">MAIN NAVIGATION</li>
                         <li class="treeview" lte-treeview>
                             <a href="#" lte-treeview-toggle>
