Implemented flexbox layout to remove the need for JavaScript layout.

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/AdminLTE.min.css" />
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/skins/_all-skins.min.css" />
         <link rel="stylesheet" type="text/css" href="/node_modules/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="/dist/angular-lte.min.css" />
     </head>
     <body class="skin-blue sidebar-mini">
         <div class="wrapper">
@@ -564,6 +565,16 @@
                         <div class="col-md-3">
                             <lte-box collapsable="true" collapsed="false" title="Collapsable" type="warning" solid="true">
                                 The body of the box
+
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce libero felis, auctor commodo sollicitudin in, interdum eu magna. Nullam molestie lacus at ante tincidunt mollis. Curabitur eu luctus eros. Nulla vel volutpat ante, vel feugiat ligula. Curabitur neque ante, vehicula ac enim id, viverra venenatis quam. Aliquam aliquam, massa ut faucibus lacinia, purus quam congue sapien, at aliquet eros diam eu ligula. Nullam dignissim risus porttitor lorem vehicula maximus. Maecenas vitae nulla eleifend, finibus nulla nec, hendrerit ipsum. Ut porta ac est vel congue.
+
+Curabitur ut vehicula metus. Fusce eleifend commodo elit, at ornare ex luctus sit amet. Nullam ut rhoncus orci. Phasellus aliquam lectus ac tristique convallis. Praesent ullamcorper enim ut nibh mattis vulputate. Quisque in elit et neque imperdiet maximus at eget lectus. Duis maximus pharetra nisl sollicitudin fringilla. Donec non mauris at nisl luctus efficitur. Maecenas ut enim quis tellus aliquet egestas. Donec tortor magna, egestas a congue ac, molestie nec dolor. Aliquam sed urna lacus. Aenean egestas, est a maximus tincidunt, enim nunc feugiat justo, in mattis dolor nisl in risus. Nullam suscipit velit quis orci varius gravida. Cras feugiat orci vel nibh cursus dictum.
+
+Curabitur at tellus fringilla, tristique ligula nec, blandit mauris. Nunc non eros hendrerit, pretium metus non, feugiat dolor. Fusce justo libero, auctor non nisi sit amet, varius pharetra neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur tempor lacus in augue varius efficitur. Nulla vehicula tincidunt posuere. Proin et ornare tellus, nec luctus sapien. Pellentesque id lobortis arcu.
+
+Vestibulum ultricies nibh eget neque consequat tincidunt. Phasellus lorem est, pretium venenatis malesuada et, vulputate nec quam. Etiam mauris velit, feugiat eget auctor vel, molestie ut libero. Nunc eu euismod enim, at efficitur massa. Etiam tortor tellus, sodales ut mi vestibulum, fermentum vestibulum nunc. Vestibulum convallis pellentesque justo nec porta. Pellentesque consequat accumsan leo a scelerisque. Ut porta, nunc id vestibulum ornare, mauris massa faucibus enim, eu gravida tellus nibh in augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sagittis diam vel justo sollicitudin gravida. Nunc sollicitudin sem in risus egestas, non ullamcorper eros tempus. Cras tempus consequat mauris eu sagittis. Phasellus sed ligula nibh. Sed egestas quis dui ac pellentesque. Vivamus sodales commodo dui mollis lacinia.
+
+Etiam semper malesuada sapien, ut facilisis sapien ultricies quis. Ut interdum finibus augue, ut feugiat dolor mattis eu. Maecenas a risus sodales sapien placerat consectetur. Suspendisse quis turpis pharetra, imperdiet sem at, congue nibh. Quisque rhoncus orci non consequat laoreet. Ut interdum sed massa nec cursus. Quisque feugiat, leo ac hendrerit vehicula, sapien ipsum faucibus lorem, eu eleifend ex ante nec risus. Aenean lacus dolor, ullamcorper eget consequat eu, tempor vel quam. Sed placerat sed nulla at lacinia. Curabitur at magna et dui cursus lacinia. Sed vitae viverra ipsum. Cras massa lacus, varius vitae dui pellentesque, mattis aliquet sapien.
                             </lte-box>
                         </div>
                         <div class="col-md-3">
@@ -574,6 +585,13 @@
                     </div>
                 </section>
             </div>
+            <footer class="main-footer">
+                <div class="pull-right hidden-xs">
+                <b>Version</b> 2.4.0
+                </div>
+                <strong>Copyright © 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
+                reserved.
+            </footer>
         </div>
     </body>
 </html>
