Added sidebar toggle.

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,9 @@
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/AdminLTE.min.css" />
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/dist/css/skins/_all-skins.min.css" />
         <link rel="stylesheet" type="text/css" href="/node_modules/font-awesome/css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="/dist/angular-lte.min.css" />
+        <link rel="stylesheet" type="text/css" href="/dist/angular-lte.css" />
     </head>
-    <body class="skin-blue sidebar-mini">
+    <body class="skin-blue sidebar-mini" lte-body>
         <div class="wrapper">
             <header class="main-header">
                 <a href="#" class="logo">
@@ -26,7 +26,7 @@
                     </span>
                 </a>
                 <nav class="navbar navbar-static-top">
-                    <a href="#" class="sidebar-toggle">
+                    <a href="#" class="sidebar-toggle" lte-sidebar-toggle>
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
