--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
         <script src="/node_modules/angular/angular.min.js"></script>
         <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
         <script src="/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-        <script src="/dist/angular-lte.js"></script>
+        <script src="/dist/angular-lte.min.js"></script>
         <script src="/demo/demo.js"></script>
 
         <link rel="stylesheet" type="text/css" href="/node_modules/admin-lte/bootstrap/css/bootstrap.min.css" />
